--- a/VolleyballMatch.Web/Components/Layout/MainLayout.razor
+++ b/VolleyballMatch.Web/Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <NavLink href="/counter">Matchen</NavLink>
         </div>
 
         <article class="content px-4">
