Add red text to bad stats
Update player stats table in Home.razor

Modified columns to include 'text-danger' class for red text.
Updated colspan for "Geen Stats." row from 7 to 9.

--- a/VolleyballMatch.Web/Components/Pages/Home.razor
+++ b/VolleyballMatch.Web/Components/Pages/Home.razor
@@ -150,17 +150,17 @@
                                         <td>@stats.BlockPointAmount</td>
                                         <td>@stats.PointAmount</td>
                                         <td>@stats.AceAmount</td>
-                                        <td>@stats.ReceptionfaultAmount</td>
-                                        <td>@stats.FaultAmount</td>
-                                        <td>@stats.SetFaultAmount</td>
-                                        <td>@stats.BlockOutAmount</td>
+                                        <td class="text-danger">@stats.ReceptionfaultAmount</td>
+                                        <td class="text-danger">@stats.FaultAmount</td>
+                                        <td class="text-danger">@stats.SetFaultAmount</td>
+                                        <td class="text-danger">@stats.BlockOutAmount</td>
                                     </tr>
                                 }
                             }
                             else
                             {
                                 <tr>
-                                    <td colspan="7" class="text-center">Geen Stats.</td>
+                                    <td colspan="9" class="text-center">Geen Stats.</td>
                                 </tr>
                             }
                         </tbody>
